--- a/src/SelectionDialog/selectiondatadialog.ui
+++ b/src/SelectionDialog/selectiondatadialog.ui
@@ -100,30 +100,7 @@
           <enum>Qt::NoFocus</enum>
          </property>
          <property name="text">
-          <string>Cancel</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="pushButton_Next">
-         <property name="focusPolicy">
-          <enum>Qt::NoFocus</enum>
-         </property>
-         <property name="text">
-          <string>Next</string>
+          <string>Clear</string>
          </property>
         </widget>
        </item>
